@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-26T08:20:27Z",
+  "timestamp" : "2022-08-26T16:21:38Z",
   "count_outdated" : 489,
   "uniques_outdated" : 282,
-  "count" : 505,
+  "count" : 506,
   "uniques" : 293,
   "clones" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
